# claude-code-usage-bar

./: pyproject.toml
docs/superpowers/plans/: 2026-04-08-branch-worktree-display.md
docs/superpowers/specs/: 2026-04-08-branch-worktree-display-design.md
src/claude_statusbar/: cli.py  core.py  git_info.py  pet.py  progress.py  updater.py  updater_background.py
tests/: test_progress.py
